--- a/jmcomic-sample/pom.xml
+++ b/jmcomic-sample/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>io.github.jukomu</groupId>
         <artifactId>jmcomic-api-java</artifactId>
-        <version>0.0.1</version>
+        <version>0.0.2</version>
     </parent>
 
     <artifactId>jmcomic-sample</artifactId>
@@ -15,7 +15,7 @@
         <dependency>
             <groupId>io.github.jukomu</groupId>
             <artifactId>jmcomic-core</artifactId>
-            <version>0.0.1</version>
+            <version>${project.version}</version>
             <scope>compile</scope>
         </dependency>
     </dependencies>
