--- a/pom.xml
+++ b/pom.xml
@@ -6,13 +6,14 @@
 
     <groupId>io.github.jukomu</groupId>
     <artifactId>jmcomic-api-java</artifactId>
-    <version>0.0.2</version>
+    <version>0.0.3</version>
     <packaging>pom</packaging>
     <modules>
         <module>jmcomic-api</module>
         <module>jmcomic-core</module>
         <module>jmcomic-sample</module>
         <module>jmcomic-android-support</module>
+<!--        <module>jmcomic-desktop-support</module>-->
     </modules>
 
     <name>JMComic API for Java</name>
@@ -135,7 +136,9 @@
                         <execution>
                             <id>attach-sources</id>
                             <phase>package</phase>
-                            <goals><goal>jar</goal></goals>
+                            <goals>
+                                <goal>jar</goal>
+                            </goals>
                         </execution>
                     </executions>
                 </plugin>
@@ -148,7 +151,9 @@
                         <execution>
                             <id>attach-javadocs</id>
                             <phase>package</phase>
-                            <goals><goal>jar</goal></goals>
+                            <goals>
+                                <goal>jar</goal>
+                            </goals>
                             <configuration>
                                 <failOnError>false</failOnError>
                                 <encoding>UTF-8</encoding>
