--- a/jmcomic-core/pom.xml
+++ b/jmcomic-core/pom.xml
@@ -19,6 +19,12 @@
             <version>${project.version}</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>io.github.jukomu</groupId>
+            <artifactId>jmcomic-desktop-support</artifactId>
+            <version>${project.version}</version>
+            <scope>test</scope>
+        </dependency>
         <!-- 工具 -->
         <dependency>
             <groupId>org.apache.commons</groupId>
@@ -82,12 +88,6 @@
             <artifactId>junit-jupiter-params</artifactId>
             <scope>test</scope>
         </dependency>
-<!--        <dependency>-->
-<!--            <groupId>io.github.jukomu</groupId>-->
-<!--            <artifactId>jmcomic-desktop-support</artifactId>-->
-<!--            <version>0.0.2</version>-->
-<!--            <scope>test</scope>-->
-<!--        </dependency>-->
     </dependencies>
 
 </project>
